code25_all/scala/17125733.txt
case class A(val x:Int, val y:Int = x*2)

scala> case class B(val x:Int, val y:Int = x*2)
<console>:7: error: not found: value x
   case class B(val x:Int, val y:Int = x*2)
                                       ^

